--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -351,26 +351,26 @@ p{
 
 
 
-table{
-  width: 100%;
-  margin-top: 50px;
-  margin-bottom: 60px; 
- td, th{
-  border: 1px solid black;
-  padding: 8px;
-  text-align: left;
-}}
+// table{
+//   width: 100%;
+//   margin-top: 50px;
+//   margin-bottom: 60px; 
+//  td, th{
+//   border: 1px solid black;
+//   padding: 8px;
+//   text-align: left;
+// }}
 
-.table__th{
-  width: 30%;
-  padding: 8px;
-  text-align: left;
-}
+// .table__th{
+//   width: 30%;
+//   padding: 8px;
+//   text-align: left;
+// }
 
-.table__td1{
-  width: 70%;
-  padding: 8px;
-}
+// .table__td1{
+//   width: 70%;
+//   padding: 8px;
+// }
 
 // .table__td{
 //   width: 30%;
