--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -108,6 +108,39 @@
   }
 
   //single//
+  .p-main-content-single{
+    padding-left: 24px;
+    h2{
+      font-size: 2.2rem;
+      font-weight: bold;
+      padding-top: 15px;
+      margin-top: 60px;
+    }
+    @include sp{
+      font-size: 1.75rem;
+    }
+    p{
+        font-size: 1rem;
+        margin: 10px 3px;
+        margin-top: 60px;
+        line-height: 1.3rem;
+      }
+
+    .p-article__blockquote{
+        margin: 60px 0;
+        padding: 32px;
+        background-color: #F5F5F5;
+        line-height: 1.5;
+      }
+    blockquote{
+        padding-top: 50px;
+      }
+    
+  }
+
+
+
+
   .p-article{
     padding-left: 24px;
       h2{
