--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -109,7 +109,7 @@
 
   //single//
   .p-main-content-single{
-    padding-left: 24px;
+    // padding-left: 24px;
     h2{
       font-size: 2.2rem;
       font-weight: bold;
