--- a/scss/object/project/_sidebar.scss
+++ b/scss/object/project/_sidebar.scss
@@ -42,3 +42,26 @@
     padding-top: 37px;
   }
   
+  // sidebar-wp
+
+  .menu-item{
+    font-size: 2.1rem;
+    font-weight: bold;
+    margin-left: 27px;
+    margin-top: 82px;
+    color: #707070;
+    @include tab{
+      display: none;
+    } 
+    @include sp{
+      display: none;
+    }
+    a{
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 85px;
+      text-decoration: none;
+      color: #707070;
+      margin-left: 46px;
+    }
+  }
