--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -45,7 +45,26 @@
     }
   }
 
-  //archive//
+ 
+  //archive-wp//
+  .wp-pagenavi{
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+    margin-bottom: 60px;
+    @include sp{
+      display: none;
+    }
+    li{
+      display: inline;
+      padding:10px 15px;
+      border:1px #ccc solid;color:#000053;
+      border-radius: 5px / 5px;
+      @include tab{
+        padding: 10px 4px;
+      }
+    }
+  }
 
    .p-main__subtitle{
     font-size: 3.7rem;
@@ -107,9 +126,9 @@
     }
   }
 
-  //single//
+  //single-wp//
   .p-main-content-single{
-    // padding-left: 24px;
+    padding-left: 24px;
     h2{
       font-size: 2.2rem;
       font-weight: bold;
@@ -125,6 +144,37 @@
         margin-top: 60px;
         line-height: 1.3rem;
       }
+      h3{
+        margin-top: 60px;
+        font-size: 1.7rem;
+        font-weight: bold;
+        @include sp{
+          font-size: 1.5rem;
+          margin-left: 20px;
+        }
+      }
+      h4{
+        margin-top: 60px;
+        font-weight: bold;
+        font-size: 1.2rem;
+        @include tab{
+          margin-left: 20px;
+        }
+      }
+      h5{
+        margin-top: 60px;
+        font-weight: bold;
+      }
+      @include tab{
+        margin-left: 20px;
+      }
+      h6{
+        margin-top: 60px;
+        font-weight: bold;
+      }
+      @include tab{
+        margin-left: 20px;
+      }
 
     .p-article__blockquote{
         margin: 60px 0;
@@ -132,15 +182,70 @@
         background-color: #F5F5F5;
         line-height: 1.5;
       }
-    blockquote{
+      blockquote{
         padding-top: 50px;
       }
+      .size-large{
+        margin-top: 60px;
+        text-align: center;
+        margin-right: 25px;
+        @include tab{
+          margin-top: 1%;
+        }
+      }
+      .wp-block-media-text{
+        margin-top: 60px;
+      }
+      .wp-block-image{
+        // width: 50%;
+        @include sp{
+          height: 89px;
+          width: 45%;
+        }
+      }
+      .wp-block-gallery{
+        margin-top: 60px;
+      }
+      .blocks-gallery-grid{
+        margin-right: 25px;
+      }
+      ol {
+          margin-top: 60px;
+        ol{
+          text-indent: 1rem;
+        }
+      }
+      ul{
+        margin-top: 60px;
+        ul{
+          text-indent: 1rem;
+          
+        }
+      }
+      .wp-block-code{
+        background-color: gray;
+        margin-top: 60px;
+      }
+      table {
+        margin-top: 60px;
+        td{
+          border: solid 1px; 
+        }
+      }
+      .wp-block-buttons{
+        padding: 0;
+        border-radius: 20px;
+        margin-bottom: 60px;
+      }
+    }
+
+      
     
-  }
+  
 
 
 
-
+//  single
   .p-article{
     padding-left: 24px;
       h2{
