--- a/scss/style.css
+++ b/scss/style.css
@@ -945,6 +945,10 @@ h2 {
   }
 }
 
+.wp-pagenavi a {
+  color: inherit;
+}
+
 .wp-pagenavi li {
   display: inline;
   padding: 10px 15px;
@@ -1121,26 +1125,31 @@ h2 {
   padding-top: 50px;
 }
 
-.p-main-content-single .size-large {
-  margin-top: 60px;
-  text-align: center;
-  margin-right: 25px;
-}
-
-@media (max-width: 1200px) {
-  .p-main-content-single .size-large {
-    margin-top: 1%;
-  }
-}
-
 .p-main-content-single .wp-block-media-text {
   margin-top: 60px;
+}
+
+.p-main-content-single .w-600 {
+  width: 470px;
+  margin: 0 auto;
 }
 
 @media (max-width: 599px) {
   .p-main-content-single .wp-block-image {
     height: 89px;
     width: 45%;
+  }
+}
+
+.p-main-content-single .wp-block-image .size-large, .p-main-content-single .wp-block-image .size-full {
+  margin-top: 60px;
+  text-align: center;
+  margin-right: 25px;
+}
+
+@media (max-width: 1200px) {
+  .p-main-content-single .wp-block-image .size-large, .p-main-content-single .wp-block-image .size-full {
+    margin-top: 1%;
   }
 }
 
@@ -1157,6 +1166,7 @@ h2 {
 }
 
 .p-main-content-single ol ol {
+  margin-bottom: 60px;
   text-indent: 1rem;
 }
 
@@ -1166,6 +1176,7 @@ h2 {
 
 .p-main-content-single ul ul {
   text-indent: 1rem;
+  margin-bottom: 60px;
 }
 
 .p-main-content-single .wp-block-code {
