--- a/scss/style.css
+++ b/scss/style.css
@@ -3,6 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -153,6 +154,7 @@ h2 {
   margin-right: 20px;
   position: relative;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .l-main__img-box .l-main__img__left h2::after {
@@ -217,6 +219,7 @@ h2 {
   margin-left: 20px;
   position: relative;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .l-main__img-box .l-main__img__right h2::after {
@@ -428,7 +431,7 @@ h2 {
   text-decoration: none;
   display: block;
   border-radius: 40px;
-  padding: 16px 20px;
+  align-items: center;
   margin-bottom: 60px;
   color: #707070;
   background-color: white;
@@ -508,6 +511,29 @@ h2 {
   .l-main__content__single {
     margin: 0 20px;
   }
+}
+
+.wp-block-table {
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+
+.wp-block-table td, .wp-block-table th {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}
+
+.table__th {
+  width: 30%;
+  padding: 8px;
+  text-align: left;
+}
+
+.table__td1 {
+  width: 70%;
+  padding: 8px;
 }
 
 .l-main__page__title {
@@ -629,6 +655,10 @@ h2 {
   font-size: 14px;
 }
 
+.l-footer__section a {
+  text-decoration: none;
+}
+
 .c-site__btn button {
   width: 30%;
   padding: 0;
@@ -648,6 +678,21 @@ h2 {
   .c-site__btn button {
     width: 100%;
   }
+}
+
+.wp-block-button__link {
+  width: 30%;
+  padding: 0;
+  border-radius: 20px;
+  margin-bottom: 60px;
+}
+
+.wp-block-button__link a {
+  text-decoration: none;
+  color: #3C2A10;
+  display: block;
+  padding: 52px 0;
+  border-radius: 20px;
 }
 
 .c-site__bold {
@@ -933,34 +978,27 @@ h2 {
 }
 
 .wp-pagenavi {
-  display: flex;
-  justify-content: center;
+  color: #707070;
+  text-align: center;
   margin-top: 150px;
   margin-bottom: 60px;
 }
 
-@media (max-width: 599px) {
-  .wp-pagenavi {
-    display: none;
-  }
-}
-
-.wp-pagenavi a {
+.wp-pagenavi a, .wp-pagenavi span {
+  border: 1px solid #707070;
+  padding: 7px 13px;
+  margin-left: 13px;
   color: inherit;
+  text-decoration: none;
 }
 
-.wp-pagenavi li {
-  display: inline;
-  padding: 10px 15px;
-  border: 1px #ccc solid;
-  color: #000053;
-  border-radius: 5px / 5px;
+.wp-pagenavi .pages, .wp-pagenavi .previouspostslink, .wp-pagenavi .nextpostslink {
+  border: none;
 }
 
-@media (max-width: 1200px) {
-  .wp-pagenavi li {
-    padding: 10px 4px;
-  }
+.wp-pagenavi .current {
+  background-color: #3C2B1C;
+  color: #ffffff;
 }
 
 .p-main__subtitle {
@@ -1180,7 +1218,7 @@ h2 {
 }
 
 .p-main-content-single .wp-block-code {
-  background-color: gray;
+  background-color: #F5F5F5;
   margin-top: 60px;
 }
 
@@ -1192,10 +1230,31 @@ h2 {
   border: solid 1px;
 }
 
+.p-main-content-single table td:nth-of-type(1) {
+  width: 30%;
+}
+
+.p-main-content-single table td:nth-of-type(2) {
+  width: 70%;
+}
+
 .p-main-content-single .wp-block-buttons {
+  width: 100%;
   padding: 0;
   border-radius: 20px;
   margin-bottom: 60px;
+}
+
+.p-main-content-single .wp-block-buttons a {
+  text-decoration: none;
+  color: #3C2A10;
+  display: block;
+  padding: 52px 0;
+  border-radius: 20px;
+}
+
+:root .has-cyan-bluish-gray-background-color {
+  background-color: #F2EDE9;
 }
 
 .p-article {
@@ -1416,7 +1475,8 @@ h2 {
   font-size: 2.1rem;
   font-weight: bold;
   margin-left: 46px;
-  margin-top: 82px;
+  margin-top: 42px;
+  margin-bottom: 85px;
   color: #707070;
 }
 
@@ -1435,7 +1495,7 @@ h2 {
 .p-sidebar__category {
   font-size: 24px;
   font-weight: bold;
-  margin-top: 85px;
+  margin-bottom: 37px;
 }
 
 .p-sidebar__category a {
@@ -1464,32 +1524,26 @@ h2 {
   padding-top: 37px;
 }
 
-.menu-item {
+.menu .menu-item {
   font-size: 2.1rem;
-  font-weight: bold;
   margin-left: 27px;
-  margin-top: 82px;
+  margin-top: 23px;
   color: #707070;
 }
 
-@media (max-width: 1200px) {
-  .menu-item {
-    display: none;
-  }
-}
-
-@media (max-width: 599px) {
-  .menu-item {
-    display: none;
-  }
-}
-
-.menu-item a {
+.menu .menu-item a {
   font-size: 24px;
-  font-weight: bold;
   margin-top: 85px;
   text-decoration: none;
   color: #707070;
   margin-left: 46px;
+}
+
+.menu > .menu-item > a {
+  font-weight: bold;
+}
+
+.sub-menu span {
+  font-size: 1.25rem;
 }
 /*# sourceMappingURL=style.css.map */
