--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -60,6 +60,7 @@ p{
     margin-right: 20px;
     position: relative;
     background-repeat: no-repeat;
+    background-size: cover;
    
     h2::after {
       content: "";
@@ -108,6 +109,7 @@ p{
     margin-left: 20px;
     position: relative;
     background-repeat: no-repeat;
+    background-size: cover;
     h2::after {
       content: "";
       display: block;
@@ -284,7 +286,7 @@ p{
     text-decoration: none;
     display: block;
     border-radius: 40px;
-    padding: 16px 20px;
+    align-items: center;
     margin-bottom: 60px;
     color: #707070;
     background-color: white;
@@ -352,7 +354,26 @@ p{
 }
 
 
+.wp-block-table{
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 60px; 
+ td, th{
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}}
 
+.table__th{
+  width: 30%;
+  padding: 8px;
+  text-align: left;
+}
+
+.table__td1{
+  width: 70%;
+  padding: 8px;
+}
 
 
 // table{
