--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -144,6 +144,7 @@
       font-weight: bold;
       padding-top: 15px;
       margin-top: 60px;
+      margin-bottom: 70px;
     }
     @include sp{
       font-size: 1.75rem;
