--- a/scss/style.css
+++ b/scss/style.css
@@ -1089,6 +1089,7 @@ h2 {
   font-weight: bold;
   padding-top: 15px;
   margin-top: 60px;
+  margin-bottom: 70px;
 }
 
 @media (max-width: 599px) {
