--- a/scss/object/component/_bold.scss
+++ b/scss/object/component/_bold.scss
@@ -4,3 +4,11 @@
     font-weight: bold;
     margin-bottom: 179px;
   }
+
+  
+    strong{
+      font-size: 1rem;
+      font-weight: bold;
+      margin-bottom: 179px;
+    }
+  
