--- a/scss/object/component/_code.scss
+++ b/scss/object/component/_code.scss
@@ -7,3 +7,9 @@
       font-weight: normal;
     }
   }
+
+  .wp-block-code{
+    background-color: #F5F5F5;
+    margin-top: 60px;
+    padding: 50px 69px 50px 50px;
+  }
