--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   Author URI:     //作った人の URL
   Tags:           //テーマのタイプ
   License:GPLv2 or later
-  License:URI:http://www.gnu.org/licenses/gpl-2.0.html
+  License URI:http://www.gnu.org/licenses/gpl-2.0.html
   Text Domain:hambergarsitewp
   Tested up to:5.8.1
   Requires PHP:8.0.0
