--- a/scss/foundation/_reset.scss
+++ b/scss/foundation/_reset.scss
@@ -34,7 +34,8 @@ footer, header, hgroup, menu, nav, section {
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap');
 body {
 	line-height: 1;
-	font-family: 'M PLUS 1p', sans-serif;
+	font-family: 'M PLUS 1p','Noto Sans JP', sans-serif ;
+	font-size: 62.5%;
 }
 ol, ul {
 	list-style: none;
