--- a/scss/object/component/_code.scss
+++ b/scss/object/component/_code.scss
@@ -9,7 +9,11 @@
   }
 
   .wp-block-code{
+    font-size: 1rem;
     background-color: #F5F5F5;
     margin-top: 60px;
     padding: 50px 69px 50px 50px;
+    @include sp{
+      font-size: 1.2rem;
+    }
   }
