--- a/scss/foundation/_reset.scss
+++ b/scss/foundation/_reset.scss
@@ -36,6 +36,7 @@ body {
 	line-height: 1;
 	font-family: 'M PLUS 1p','Noto Sans JP', sans-serif ;
 	font-size: 62.5%;
+	width: 100%;
 }
 ol, ul {
 	list-style: none;
