--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -20,8 +20,16 @@ h2{
   display: flex;
   align-items: center;
   background-size: cover;
+  @include tab{
+    width: 100%;
+    height: 285px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
   @include sp{
     width: 100%;
+    height: 285px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -61,7 +69,7 @@ p{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-   
+    height: 681px;
     h2::after {
       content: "";
       display: block;
@@ -110,6 +118,10 @@ p{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 681px;
+    // @include tab{
+    //   height: 642px;
+    // }
     h2::after {
       content: "";
       display: block;
@@ -142,7 +154,7 @@ p{
 }
 
 .l-main__block {
-  background-color: #707070;
+  background-color: rgba(0,0,0,0.3);
   width: 61%;
   height: 100%;
   box-sizing: border-box;
@@ -298,10 +310,12 @@ p{
     margin-top: 20px;
     position: relative;
     left: 70px;
+    top: 2%;
     @include tab{
       border-radius: 26px;
-      width: 99%;
+      width: 58%;
       left: 4%;
+      top: 3%;
       text-align: center;
     }
     @include sp{
@@ -330,9 +344,17 @@ p{
   background-size: cover;
   @include tab{
     width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
   @include sp{
     width: 100%;
+    height: 225px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
   h1{
     font-size: 3.7rem;
