--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -1,12 +1,16 @@
 // .p-rankingのクラス名　サイト固有のまとまりを定義してパターン化するパーツ。案件に応じて追加していくパーツです。
 .p-header{
-    padding: 19px 16px;
+    padding: 0px 30px 0 65px;
     background-color: #FFF7EF;
     justify-content: space-between;
     display: flex;
+    height: 217px;
+    align-items: center;
     @include tab{
       position: relative;
       padding: 120px 16px;
+      flex-flow: column;
+      justify-content: center;
     }
     @include sp{
       padding:98px 0;
@@ -21,11 +25,7 @@
       margin-top: 1%;
       font-size: 4rem;
       font-weight: bold;
-      @include tab{
-        position: absolute;
-        top: 15%;
-        left: 30%;
-    }
+
       @include sp{
         font-size: 2.5rem;
         margin-bottom: 38px;
@@ -125,19 +125,13 @@
   
       .p-header__form{
       display: flex;
-      padding: 1%;
       width: 50%;
       @include tab{
-        position: absolute;
         width: 71%;
-        top: 59%;
-        left: 16%;
+        padding-top: 38px;
       }
      
       @include sp{
-        position: absolute;
-        top: 64%;
-        left: 8%;
         width: 83%;
       }
       }
