--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -7,9 +7,16 @@
   }
   .p-box{
     margin-top: 680px;
+    position: absolute;
+    bottom: 0;
+    margin-right: 11px;
+    @include tab{
+      position: absolute;
+      bottom: 0;
+      margin-right: 11px;
     @include sp{
       padding: 0 10px 11px 10px;
-    }
+    }}
     &__take-out{
      background-color: white;
      padding: 10px;
@@ -23,8 +30,8 @@
    }
    &__take-out p{
      line-height: 1.3;
-   }
-   }
+   }}
+   
    .p-main__heading {
     font-size: 36px;
     font-weight: bold;
@@ -44,7 +51,36 @@
       line-height: 1.8;
     }
   }
-
+  .p-maps__layer1{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(#000000, 0.3);
+    z-index: 10;
+    @include tab{
+        width: 0;
+    }
+    @include sp{
+        width: 100%;
+         height: 100%;
+    }
+  }
+.p-maps__layer2{
+  position: absolute;
+  top: 0;
+  width: 55%;
+  height: 100%;
+  background-color: rgba(#000, 0.5);
+  z-index: 5;
+  @include tab{
+      width: 100%;
+      background-color: rgba(#000, 0.6);
+  }
+  @include sp{
+      height: 50%;
+  }
+}
  
  
   
@@ -53,6 +89,9 @@
       text-align: center;
       margin-top: 150px;
       margin-bottom: 60px;
+      @include sp{
+        display: none;
+      }
       a,span{
         border: 1px solid #707070;
         padding: 7px 13px;
@@ -131,6 +170,13 @@
       ul{
         display: flex;
         justify-content: space-between;
+        .next{
+          margin-left: auto;
+        }
+        a{
+          text-decoration: none;
+          color: inherit;
+        }
       }
     
     }
@@ -143,14 +189,14 @@
       padding-left: 0px;
     }
     h2{
-      font-size: 2.2rem;
+      font-size: 3.6rem;
       font-weight: bold;
       padding-top: 15px;
       margin-top: 60px;
       margin-bottom: 70px;
     }
     @include sp{
-      font-size: 1.75rem;
+      font-size: 2.8rem;
     }
     p{
         font-size: 1rem;
@@ -160,22 +206,21 @@
       }
       h3{
         margin-top: 60px;
-        font-size: 1.7rem;
+        font-size: 2.8rem;
         font-weight: bold;
         @include sp{
-          font-size: 1.5rem;
-          margin-left: 20px;
+          font-size: 2.4rem;
+         
         }
       }
       h4{
         margin-top: 60px;
         font-weight: bold;
-        font-size: 1.2rem;
-        @include tab{
-          margin-left: 20px;
-        }
+        font-size: 2rem;
+        
       }
       h5{
+        font-size: 2rem;
         margin-top: 60px;
         font-weight: bold;
       }
@@ -183,6 +228,7 @@
         margin-left: 20px;
       }
       h6{
+        font-size: 2rem;
         margin-top: 60px;
         font-weight: bold;
       }
@@ -232,6 +278,9 @@
           @include tab{
             margin-top: 1%;
           }
+          @include sp{
+            margin-right: 0;
+          }
         }
       }
       .wp-block-gallery{
@@ -239,6 +288,9 @@
       }
       .blocks-gallery-grid{
         margin-right: 25px;
+        @include sp{
+          margin-right: 0;
+        }
       }
       ol {
           margin-top: 60px;
@@ -261,8 +313,9 @@
         margin-top: 60px;
         td{
           border: solid 1px;
+          font-size: 1.6rem;
           @include sp{
-            font-size: 1.2rem;
+            font-size: 1.6rem;
           }
         }
         
