--- a/scss/style.css
+++ b/scss/style.css
@@ -36,6 +36,7 @@ body {
   line-height: 1;
   font-family: 'M PLUS 1p','Noto Sans JP', sans-serif;
   font-size: 62.5%;
+  width: 100%;
 }
 
 ol, ul {
@@ -104,9 +105,20 @@ h2 {
   background-size: cover;
 }
 
+@media (max-width: 1200px) {
+  .l-main__title__front {
+    width: 100%;
+    height: 285px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+}
+
 @media (max-width: 599px) {
   .l-main__title__front {
     width: 100%;
+    height: 285px;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -156,6 +168,7 @@ h2 {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 681px;
 }
 
 .l-main__img-box .l-main__img__left h2::after {
@@ -221,6 +234,7 @@ h2 {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 681px;
 }
 
 .l-main__img-box .l-main__img__right h2::after {
@@ -255,7 +269,7 @@ h2 {
 }
 
 .l-main__block {
-  background-color: #707070;
+  background-color: rgba(0, 0, 0, 0.3);
   width: 61%;
   height: 100%;
   box-sizing: border-box;
@@ -444,13 +458,15 @@ h2 {
   margin-top: 20px;
   position: relative;
   left: 70px;
+  top: 2%;
 }
 
 @media (max-width: 1200px) {
   .menu__content__text a {
     border-radius: 26px;
-    width: 99%;
+    width: 58%;
     left: 4%;
+    top: 3%;
     text-align: center;
   }
 }
@@ -480,12 +496,20 @@ h2 {
 @media (max-width: 1200px) {
   .l-main__single__title {
     width: 100%;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
 }
 
 @media (max-width: 599px) {
   .l-main__single__title {
     width: 100%;
+    height: 225px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
   }
 }
 
@@ -560,6 +584,7 @@ h2 {
 .l-sidebar {
   background-color: #F2EDE9;
   width: 25%;
+  padding-bottom: 100px;
 }
 
 @media (max-width: 1200px) {
@@ -687,6 +712,12 @@ h2 {
   background-color: #F2EDE9;
 }
 
+@media (max-width: 599px) {
+  .wp-block-button__link {
+    margin-bottom: 30px;
+  }
+}
+
 .wp-block-buttons {
   width: 100%;
   padding: 0;
@@ -704,7 +735,7 @@ h2 {
 
 @media (max-width: 599px) {
   .wp-block-buttons a {
-    padding: 56px 69px;
+    padding: 40px 100px;
   }
 }
 
@@ -738,16 +769,20 @@ strong {
 }
 
 .p-header {
-  padding: 19px 16px;
+  padding: 0px 30px 0 65px;
   background-color: #FFF7EF;
   justify-content: space-between;
   display: flex;
+  height: 217px;
+  align-items: center;
 }
 
 @media (max-width: 1200px) {
   .p-header {
     position: relative;
     padding: 120px 16px;
+    flex-flow: column;
+    justify-content: center;
   }
 }
 
@@ -765,14 +800,6 @@ strong {
   margin-top: 1%;
   font-size: 4rem;
   font-weight: bold;
-}
-
-@media (max-width: 1200px) {
-  .p-header__title {
-    position: absolute;
-    top: 15%;
-    left: 30%;
-  }
 }
 
 @media (max-width: 599px) {
@@ -890,24 +917,18 @@ strong {
 
 .p-header__form {
   display: flex;
-  padding: 1%;
   width: 50%;
 }
 
 @media (max-width: 1200px) {
   .p-header__form {
-    position: absolute;
     width: 71%;
-    top: 59%;
-    left: 16%;
+    padding-top: 38px;
   }
 }
 
 @media (max-width: 599px) {
   .p-header__form {
-    position: absolute;
-    top: 64%;
-    left: 8%;
     width: 83%;
   }
 }
@@ -951,9 +972,20 @@ strong {
 
 .p-box {
   margin-top: 680px;
+  position: absolute;
+  bottom: 0;
+  margin-right: 11px;
 }
 
-@media (max-width: 599px) {
+@media (max-width: 1200px) {
+  .p-box {
+    position: absolute;
+    bottom: 0;
+    margin-right: 11px;
+  }
+}
+
+@media (max-width: 1200px) and (max-width: 599px) {
   .p-box {
     padding: 0 10px 11px 10px;
   }
@@ -1003,11 +1035,61 @@ strong {
   }
 }
 
+.p-maps__layer1 {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+@media (max-width: 1200px) {
+  .p-maps__layer1 {
+    width: 0;
+  }
+}
+
+@media (max-width: 599px) {
+  .p-maps__layer1 {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.p-maps__layer2 {
+  position: absolute;
+  top: 0;
+  width: 55%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+}
+
+@media (max-width: 1200px) {
+  .p-maps__layer2 {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+}
+
+@media (max-width: 599px) {
+  .p-maps__layer2 {
+    height: 50%;
+  }
+}
+
 .wp-pagenavi {
   color: #707070;
   text-align: center;
   margin-top: 150px;
   margin-bottom: 60px;
+}
+
+@media (max-width: 599px) {
+  .wp-pagenavi {
+    display: none;
+  }
 }
 
 .wp-pagenavi a, .wp-pagenavi span {
@@ -1105,6 +1187,13 @@ strong {
     display: flex;
     justify-content: space-between;
   }
+  .p-pagenation__pc ul .next {
+    margin-left: auto;
+  }
+  .p-pagenation__pc ul a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .p-main-content-single {
@@ -1118,7 +1207,7 @@ strong {
 }
 
 .p-main-content-single h2 {
-  font-size: 2.2rem;
+  font-size: 3.6rem;
   font-weight: bold;
   padding-top: 15px;
   margin-top: 60px;
@@ -1127,7 +1216,7 @@ strong {
 
 @media (max-width: 599px) {
   .p-main-content-single {
-    font-size: 1.75rem;
+    font-size: 2.8rem;
   }
 }
 
@@ -1140,30 +1229,24 @@ strong {
 
 .p-main-content-single h3 {
   margin-top: 60px;
-  font-size: 1.7rem;
+  font-size: 2.8rem;
   font-weight: bold;
 }
 
 @media (max-width: 599px) {
   .p-main-content-single h3 {
-    font-size: 1.5rem;
-    margin-left: 20px;
+    font-size: 2.4rem;
   }
 }
 
 .p-main-content-single h4 {
   margin-top: 60px;
   font-weight: bold;
-  font-size: 1.2rem;
-}
-
-@media (max-width: 1200px) {
-  .p-main-content-single h4 {
-    margin-left: 20px;
-  }
+  font-size: 2rem;
 }
 
 .p-main-content-single h5 {
+  font-size: 2rem;
   margin-top: 60px;
   font-weight: bold;
 }
@@ -1175,6 +1258,7 @@ strong {
 }
 
 .p-main-content-single h6 {
+  font-size: 2rem;
   margin-top: 60px;
   font-weight: bold;
 }
@@ -1239,12 +1323,24 @@ strong {
   }
 }
 
+@media (max-width: 599px) {
+  .p-main-content-single .wp-block-image .size-large, .p-main-content-single .wp-block-image .size-full {
+    margin-right: 0;
+  }
+}
+
 .p-main-content-single .wp-block-gallery {
   margin-top: 60px;
 }
 
 .p-main-content-single .blocks-gallery-grid {
   margin-right: 25px;
+}
+
+@media (max-width: 599px) {
+  .p-main-content-single .blocks-gallery-grid {
+    margin-right: 0;
+  }
 }
 
 .p-main-content-single ol {
@@ -1271,11 +1367,12 @@ strong {
 
 .p-main-content-single table td {
   border: solid 1px;
+  font-size: 1.6rem;
 }
 
 @media (max-width: 599px) {
   .p-main-content-single table td {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
   }
 }
 
