--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -16,7 +16,7 @@ h2{
 }
 .l-main__title__front{
   height: 530px;
-  background-image: url(../img/front-header.png);
+  background-image: url(../img/front-main.jpg);
   display: flex;
   align-items: center;
   background-size: cover;
@@ -59,7 +59,6 @@ p{
   box-sizing: border-box;
  
   @include sp{
-    padding: 20px;
     display: inline-block;
   }
   .l-main__img__left{
@@ -91,9 +90,9 @@ p{
     
     @include sp{
       width: 100%;
-      margin-left: 0px;
+      margin-left: -10px;
       margin-right: 0px;
-      padding: 0;
+      padding: 31px 10px 10px 10px;
     }
   }
   .title{
@@ -140,8 +139,8 @@ p{
       width: 100%;
       margin-top: 20px;
       margin-right: 0px;
-      margin-left: 0px;
-      padding: 0;
+      margin-left: -10px;
+      padding: 13px 10px 10px 10px;
     }
   }
 }
@@ -149,8 +148,22 @@ p{
 
 .l-main__maps {
   top: 0px;
-  position: relative;
- 
+  position: relative; 
+}
+iframe{
+  @include sp{
+    height: 691px;
+  }
+}
+.l-layer{
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(112,112,112,0.6);
+  @include sp{
+    height: 60%;
+  }
 }
 
 .l-main__block {
@@ -210,6 +223,7 @@ p{
     margin-top: 60px;
     @include sp{
       font-size: 1.75rem;
+      margin-left: 30px;
       margin-top: 30px;
      
     }
@@ -248,7 +262,7 @@ p{
       height: 100%;
       object-fit: cover;
       @include sp{
-      margin-left: 38px;
+      margin-left: 25px;
     }
   }
  }
@@ -264,7 +278,7 @@ p{
   @include sp{
     padding-left: 22px;
     width: 85%;
-    margin-left: 38px;
+    margin-left: 25px;
  }
   h3{
     font-size: 2.2rem;
@@ -313,11 +327,12 @@ p{
     @include tab{
       border-radius: 26px;
       width: 58%;
-      left: 4%;
+      left: 23%;
       top: 3%;
       text-align: center;
     }
     @include sp{
+      left: 4%;
       width: 71%;
       text-align: center;
       margin-bottom: 10%;
