--- a/scss/style.css
+++ b/scss/style.css
@@ -99,7 +99,7 @@ h2 {
 
 .l-main__title__front {
   height: 530px;
-  background-image: url(../img/front-header.png);
+  background-image: url(../img/front-main.jpg);
   display: flex;
   align-items: center;
   background-size: cover;
@@ -156,7 +156,6 @@ h2 {
 
 @media (max-width: 599px) {
   .l-main__img-box {
-    padding: 20px;
     display: inline-block;
   }
 }
@@ -198,9 +197,9 @@ h2 {
 @media (max-width: 599px) {
   .l-main__img-box .l-main__img__left {
     width: 100%;
-    margin-left: 0px;
+    margin-left: -10px;
     margin-right: 0px;
-    padding: 0;
+    padding: 31px 10px 10px 10px;
   }
 }
 
@@ -258,14 +257,34 @@ h2 {
     width: 100%;
     margin-top: 20px;
     margin-right: 0px;
-    margin-left: 0px;
-    padding: 0;
+    margin-left: -10px;
+    padding: 13px 10px 10px 10px;
   }
 }
 
 .l-main__maps {
   top: 0px;
   position: relative;
+}
+
+@media (max-width: 599px) {
+  iframe {
+    height: 691px;
+  }
+}
+
+.l-layer {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(112, 112, 112, 0.6);
+}
+
+@media (max-width: 599px) {
+  .l-layer {
+    height: 60%;
+  }
 }
 
 .l-main__block {
@@ -339,6 +358,7 @@ h2 {
 @media (max-width: 599px) {
   .l-main__content__title {
     font-size: 1.75rem;
+    margin-left: 30px;
     margin-top: 30px;
   }
 }
@@ -386,7 +406,7 @@ h2 {
 
 @media (max-width: 599px) {
   .menu__content__img img {
-    margin-left: 38px;
+    margin-left: 25px;
   }
 }
 
@@ -402,7 +422,7 @@ h2 {
   .menu__content__text {
     padding-left: 22px;
     width: 85%;
-    margin-left: 38px;
+    margin-left: 25px;
   }
 }
 
@@ -464,7 +484,7 @@ h2 {
   .menu__content__text a {
     border-radius: 26px;
     width: 58%;
-    left: 4%;
+    left: 23%;
     top: 3%;
     text-align: center;
   }
@@ -472,6 +492,7 @@ h2 {
 
 @media (max-width: 599px) {
   .menu__content__text a {
+    left: 4%;
     width: 71%;
     text-align: center;
     margin-bottom: 10%;
@@ -768,18 +789,17 @@ strong {
 }
 
 .p-header {
-  padding: 0px 30px 0 65px;
+  padding: 67px 67px 60px 67px;
   background-color: #FFF7EF;
   justify-content: space-between;
   display: flex;
-  height: 217px;
   align-items: center;
 }
 
 @media (max-width: 1200px) {
   .p-header {
     position: relative;
-    padding: 120px 16px;
+    padding: 40px 16px;
     flex-flow: column;
     justify-content: center;
   }
@@ -787,7 +807,7 @@ strong {
 
 @media (max-width: 599px) {
   .p-header {
-    padding: 98px 0;
+    padding: 40px 21px 38px 21px;
     flex-direction: column;
     position: relative;
   }
@@ -796,7 +816,6 @@ strong {
 .p-header__title {
   text-align: center;
   vertical-align: middle;
-  margin-top: 1%;
   font-size: 4rem;
   font-weight: bold;
 }
@@ -928,6 +947,7 @@ strong {
 
 @media (max-width: 599px) {
   .p-header__form {
+    padding-top: 0px;
     width: 83%;
   }
 }
@@ -946,7 +966,6 @@ strong {
   font-size: 1.5rem;
   border: 1px solid #333;
   height: 46px;
-  margin-top: 8px;
 }
 
 .p-header__submit {
@@ -955,7 +974,6 @@ strong {
   margin-left: 3%;
   border: 1px solid #333;
   height: 46px;
-  margin-top: 8px;
 }
 
 .p-front__main {
@@ -992,19 +1010,35 @@ strong {
 
 .p-box__take-out {
   background-color: white;
-  padding: 10px;
+  margin-right: 12px;
+  padding: 10px 20px 10px 20px;
   margin-bottom: 15px;
   opacity: 0.7;
+}
+
+@media (max-width: 599px) {
+  .p-box__take-out {
+    margin-right: 0;
+    padding: 10px 20px 10px 20px;
+  }
 }
 
 .p-box__take-out h4 {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-bottom: 30px;
+  margin-bottom: 26px;
+  margin-top: 17px;
+}
+
+@media (max-width: 1200px) {
+  .p-box__take-out h4 {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
 }
 
 .p-box__take-out p {
-  line-height: 1.3;
+  line-height: 2.3;
 }
 
 .p-main__heading {
@@ -1031,50 +1065,6 @@ strong {
 @media (max-width: 599px) {
   .p-main__text {
     line-height: 1.8;
-  }
-}
-
-.p-maps__layer1 {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 10;
-}
-
-@media (max-width: 1200px) {
-  .p-maps__layer1 {
-    width: 0;
-  }
-}
-
-@media (max-width: 599px) {
-  .p-maps__layer1 {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.p-maps__layer2 {
-  position: absolute;
-  top: 0;
-  width: 55%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 5;
-}
-
-@media (max-width: 1200px) {
-  .p-maps__layer2 {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-  }
-}
-
-@media (max-width: 599px) {
-  .p-maps__layer2 {
-    height: 50%;
   }
 }
 
@@ -1226,6 +1216,12 @@ strong {
   line-height: 1.3rem;
 }
 
+@media (max-width: 1200px) {
+  .p-main-content-single p {
+    margin: 154px 3px;
+  }
+}
+
 .p-main-content-single h3 {
   margin-top: 60px;
   font-size: 2.8rem;
@@ -1278,6 +1274,7 @@ strong {
 .p-main-content-single blockquote p {
   padding-bottom: 60px;
   margin-top: 0px;
+  line-height: 2.3;
 }
 
 .p-main-content-single blockquote cite {
@@ -1607,6 +1604,13 @@ strong {
 @media (max-width: 599px) {
   .p-sidebar__title {
     display: none;
+  }
+}
+
+@media (max-width: 1200px) {
+  .menu {
+    margin-top: 210px;
+    margin-bottom: 100px;
   }
 }
 
