--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,7 +27,7 @@
       }
   }
   p{
-      padding-top: 39px;
+      padding: 34px 0 30px 0;
       small{
       color: #fff;
       font-size: 14px;
