--- a/scss/foundation/_mixin.scss
+++ b/scss/foundation/_mixin.scss
@@ -1,6 +1,13 @@
+$pcwi: 1650px;
 $pc: 1201px;
 $tab: 1200px;
 $sp: 599px;
+
+@mixin pcwi{
+    @media (min-width: ($pcwi)) {
+        @content;
+    }
+}
 
 @mixin pc {
     @media (min-width: ($pc)) {
@@ -13,6 +20,7 @@ $sp: 599px;
         @content;
     }
 }
+
 
 @mixin sp {
     @media (max-width: ($sp)) {
