--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -20,6 +20,9 @@ h2{
   display: flex;
   align-items: center;
   background-size: cover;
+  @include pcwi{
+    height: 650px;
+  }
   @include tab{
     width: 100%;
     height: 285px;
@@ -57,6 +60,9 @@ p{
   width: 100%;
   padding: 40px;
   box-sizing: border-box;
+  @include sp{
+    padding: 20px;
+  }
  
   @include sp{
     display: inline-block;
@@ -75,7 +81,7 @@ p{
       background: #ffff;
       height: 8px;
       width: 60px;
-      margin-top: 3%;
+      margin-top: 10%;
       @include tab{
         height: 5px;
         width: 50px;
@@ -127,7 +133,7 @@ p{
       background: #ffff;
       height: 8px;
       width: 60px;
-      margin-top: 3%;
+      margin-top: 10%;
       @include tab{
         height: 5px;
         width: 50px;
