--- a/scss/object/component/_button.scss
+++ b/scss/object/component/_button.scss
@@ -23,9 +23,9 @@
     border-radius: 20px;
     margin-bottom: 60px;
     background-color: #F2EDE9;
-    @include sp{
-      margin-bottom: 30px;
-    }
+   @include sp{
+     margin-bottom: 0;
+   }
     
   }
   .wp-block-buttons{
@@ -33,6 +33,7 @@
     padding: 0;
     border-radius: 20px;
     margin-bottom: 60px;
+    
     a{
       text-decoration: none;
       color: #3C2A10;
@@ -41,6 +42,7 @@
       border-radius: 20px;
       @include sp{
         padding: 40px 100px;
+        font-size: 1rem;
       }
     }
    
