--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -47,6 +47,7 @@
       right: 18px;
       top: 14px;
       color: #707070;
+      cursor: pointer;
     }
     @include sp{
       font-size: 1.25rem;
@@ -56,6 +57,7 @@
       top: 14px;
       left: 83%;
       color: #707070;
+      cursor: pointer;
     }
   }
   .batsu{
