--- a/scss/object/project/_main.scss
+++ b/scss/object/project/_main.scss
@@ -187,6 +187,9 @@
         @include tab{
           margin: 154px 3px;
         }
+        @include sp{
+          margin: 30px 0 70px 0;
+        }
       }
       h3{
         margin-top: 60px;
