--- a/scss/object/project/_sidebar.scss
+++ b/scss/object/project/_sidebar.scss
@@ -77,5 +77,11 @@
 .sub-menu{
   span{
     font-size: 1.25rem;
+    @include tab{
+      font-size: 2.0vw;
+    }
+    @include sp{
+      font-size: 1.25rem;
+    }
   }
 }
