--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -3,41 +3,29 @@
   width: 25%;
   padding-bottom: 100px;
   @include tab{
-    display: none;
+    position: absolute;
+    right: -100%;
+    transition: all 0.7s ease;
+    width: 44%;
+    @include sp{
+      width: 87%;
+    }
     &.active{
-      display: block;
-      width: 100vw;
       height: 100%;
       position: fixed;
       top: 0;
-      left: 60%;
       right: 0;
       bottom: 0;
       overflow-y: auto;
       
     }
   }
-  @include sp{
-    display: none;
-    &.active{
-      display: block;
-      width: 100vw;
-      position: fixed;
-      top: 0;
-      left: 10%;
-      right: 0;
-      bottom: 0;
-      overflow-y: auto;
-    }
-  }
+ 
   
 }
 
 .l-sidebar__overlay{
-  display: none;
-  @include tab{
-    &.active{
-    display: block;
+    opacity: 0;
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -45,8 +33,14 @@
     left: 0;
     right: 0;
     bottom: 0;
-    opacity: 0.5;
     background: #000000;
+    visibility: hidden;
+    transition: all 0.7s ease;
+  @include tab{
+    &.active{
+    display: block;
+    opacity: 0.5;
+    visibility: visible;
   }}
       
 }
