--- a/scss/object/project/_header.scss
+++ b/scss/object/project/_header.scss
@@ -66,7 +66,7 @@
       display: block;
       width: 50px;/*枠の大きさ*/
       height: 50px;/*枠の大きさ*/
-      position: fixed;
+      position: absolute;
       top: 8px;
       right: 12px;
       margin: 0 0 0 auto;
@@ -90,34 +90,34 @@
         right: 14%;
     }
   }
-    @include sp{
-        display: block;
-        width: 50px;/*枠の大きさ*/
-        height: 50px;/*枠の大きさ*/
-        position: relative;
-        position: fixed;
-        top: 9px;
-        margin: 1px;
-        &::before, &::after{
-          content: "";
-          display: block;
-          width: 100%;/*バツ線の長さ*/
-          height: 10px;/*バツ線の太さ*/
-          background: #000;
-          transform: rotate(45deg);
-          transform-origin:0% 50%;
-          position: absolute;
-          top: calc(14% - 5px);
-          left: 14%;
-      }
+    // @include sp{
+    //     display: block;
+    //     width: 50px;/*枠の大きさ*/
+    //     height: 50px;/*枠の大きさ*/
+    //     position: relative;
+    //     position: fixed;
+    //     top: 9px;
+    //     margin: 1px;
+    //     &::before, &::after{
+    //       content: "";
+    //       display: block;
+    //       width: 100%;/*バツ線の長さ*/
+    //       height: 10px;/*バツ線の太さ*/
+    //       background: #000;
+    //       transform: rotate(45deg);
+    //       transform-origin:0% 50%;
+    //       position: absolute;
+    //       top: calc(14% - 5px);
+    //       left: 14%;
+    //   }
       
-      &::after{
-          transform: rotate(-45deg);
-          transform-origin:100% 50%;
-          left: auto;
-          right: 14%;
-      }
-    }
+    //   &::after{
+    //       transform: rotate(-45deg);
+    //       transform-origin:100% 50%;
+    //       left: auto;
+    //       right: 14%;
+    //   }
+    // }
   
     
    
