--- a/scss/style.css
+++ b/scss/style.css
@@ -1,10 +1,14 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap");
+body {
+  overflow-x: hidden;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -107,7 +111,7 @@ h2 {
 
 @media (min-width: 1650px) {
   .l-main__title__front {
-    height: 650px;
+    background-position: center;
   }
 }
 
@@ -621,31 +625,24 @@ h2 {
 
 @media (max-width: 1200px) {
   .l-sidebar {
-    display: none;
-  }
-  .l-sidebar.active {
-    display: block;
-    width: 100vw;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 60%;
-    right: 0;
-    bottom: 0;
-    overflow-y: auto;
+    position: absolute;
+    right: -100%;
+    transition: all 0.7s ease;
+    width: 44%;
   }
 }
 
-@media (max-width: 599px) {
+@media (max-width: 1200px) and (max-width: 599px) {
   .l-sidebar {
-    display: none;
+    width: 87%;
   }
+}
+
+@media (max-width: 1200px) {
   .l-sidebar.active {
-    display: block;
-    width: 100vw;
+    height: 100%;
     position: fixed;
     top: 0;
-    left: 10%;
     right: 0;
     bottom: 0;
     overflow-y: auto;
@@ -653,21 +650,24 @@ h2 {
 }
 
 .l-sidebar__overlay {
-  display: none;
+  opacity: 0;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #000000;
+  visibility: hidden;
+  transition: all 0.7s ease;
 }
 
 @media (max-width: 1200px) {
   .l-sidebar__overlay.active {
     display: block;
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     opacity: 0.5;
-    background: #000000;
+    visibility: visible;
   }
 }
 
@@ -887,7 +887,7 @@ strong {
     /*枠の大きさ*/
     height: 50px;
     /*枠の大きさ*/
-    position: fixed;
+    position: absolute;
     top: 8px;
     right: 12px;
     margin: 0 0 0 auto;
@@ -900,40 +900,6 @@ strong {
     height: 10px;
     /*バツ線の太さ*/
     background: #707070;
-    transform: rotate(45deg);
-    transform-origin: 0% 50%;
-    position: absolute;
-    top: calc(14% - 5px);
-    left: 14%;
-  }
-  .batsu::after {
-    transform: rotate(-45deg);
-    transform-origin: 100% 50%;
-    left: auto;
-    right: 14%;
-  }
-}
-
-@media (max-width: 599px) {
-  .batsu {
-    display: block;
-    width: 50px;
-    /*枠の大きさ*/
-    height: 50px;
-    /*枠の大きさ*/
-    position: relative;
-    position: fixed;
-    top: 9px;
-    margin: 1px;
-  }
-  .batsu::before, .batsu::after {
-    content: "";
-    display: block;
-    width: 100%;
-    /*バツ線の長さ*/
-    height: 10px;
-    /*バツ線の太さ*/
-    background: #000;
     transform: rotate(45deg);
     transform-origin: 0% 50%;
     position: absolute;
