--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -1,3 +1,8 @@
-body{
-    overflow-x: hidden;
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@700&display=swap');
+body {
+	line-height: 1;
+	font-family: 'M PLUS 1p','Noto Sans JP', sans-serif ;
+	font-size: 62.5%;
+	width: 100%;
 }
