--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,10 +1,11 @@
 // header,footer,.l-が頭文字にくる
 
-
-.l-wrapper{
-  display: flex;
+.wrapper{
   overflow-x: hidden;
   position: relative;
+}
+.l-wrapper{
+  display: flex;
 }
 
 // .box__header{
